added tungsten and holmium diggers on iron and copper ore on nauvis respectively

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,17 +1,23 @@
 [entity-name]
 water-digger=Water Digger
+tungsten-digger=Tungsten Digger
 
 [entity-description]
 water-digger=Extracts calcite from water
+tungsten-digger=Extracts tungsten from iron deposits
 
 [technology-name]
 water-digging=Water Digging Technology
+tungsten-digging=Tungsten Extraction Technology
 
 [technology-description]
 water-digging=Allows the construction of water diggers that can extract calcite from water.
+tungsten-digging=Allow extracting tungsten ore from iron deposits
 
 [item-name]
 water-digger=Water Digger
+tungsten-digger=Tungsten Digger
 
 [item-description]
 water-digger=Extracts calcite from water
+tungsten-digger=Extracts tungsten ore from iron deposits
