--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,23 +1,29 @@
 [entity-name]
 water-digger=Water Digger
 tungsten-digger=Tungsten Digger
+holmium-digger=Holmium digger
 
 [entity-description]
 water-digger=Extracts calcite from water
 tungsten-digger=Extracts tungsten from iron deposits
+holmium-digger=Extracts holmium from copper deposits
 
 [technology-name]
 water-digging=Water Digging Technology
 tungsten-digging=Tungsten Extraction Technology
+holmium-digging=Holmium Extraction Technology
 
 [technology-description]
 water-digging=Allows the construction of water diggers that can extract calcite from water.
-tungsten-digging=Allow extracting tungsten ore from iron deposits
+tungsten-digging=Allows extracting tungsten ore from iron deposits
+holmium-digging=Allows extracting holmium ore from copper deposits
 
 [item-name]
 water-digger=Water Digger
 tungsten-digger=Tungsten Digger
+holmium-digger=Holmium Digger
 
 [item-description]
 water-digger=Extracts calcite from water
 tungsten-digger=Extracts tungsten ore from iron deposits
+holmium-digger=Extracts holmium ore from copper deposits
